skills overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,9 @@ a:link {
 }
 
 /* skills */
+.Skills{
+  overflow: hidden;
+}
 .Skills .skill-list {
   display: flex;
   justify-content: center;
@@ -323,21 +326,33 @@ a:link {
   text-align: center;
   padding: 10px;
 }
+.skill-list {
+  display: grid;
+  gap: 1rem;
+  padding: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media (min-width: 992px) {
+  .skill-list {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
+  }
+}
 @media (max-width: 720px) {
   .skill-title {
-    font-size: 15px;
+    font-size: 16px;
   }
   .skill-icon {
     font-size: 25px;
     z-index: 1;
     color: var(--orange);
   }
-  .cup-img {
-    width: 120px;
+  /* .cup-img {
+    width: 115px;
     z-index: 0;
     position: absolute;
     top: -12px;
-  }
+  } */
   .Skills .skill-list {
     justify-content: start;
   }
